# OctaPose

./: .gitignore  README.md  pyproject.toml
BoT-SORT/tracker/: bot_sort.py  matching.py  mc_bot_sort.py
data/pose_tables/: adesanya-alex.parquet  adesanya-costa.parquet  adesanya-whittaker.parquet  alex-jamahal.parquet  alex-stricland-not.parquet  buckley.parquet  conor-aldo.parquet  conor-alvarez.parquet  conor-dustin.parquet  conor.parquet
data/pose_tables/conor/: conor-aldo.parquet  conor-alvarez.parquet  conor-dustin.parquet
data/pose_tables/topuria/: topuria-alex.parquet  topuria-max.parquet
data/poses/: alex2.parquet  all_fighters.parquet  conor1.parquet  conor4.parquet  conor5.parquet
data/poses/clean/: alex1.parquet  alex2.parquet  alex3.parquet  alex4.parquet  alex5.parquet  conor1.parquet  conor2.parquet  conor3.parquet  conor4.parquet  conor5.parquet  dustin1.parquet  dustin2.parquet  dustin3.parquet  dustin4.parquet  (+1 more)
datasets/: pose_triplet_dataset.py
models/: ko-embedding.py
notebooks/: 1_playground.ipynb  2_training.ipynb  3_training(clean).ipynb
src/: botsort.yaml  get_data.py  pose.py  track_fighters.py  tracker.py  tracker_botmot.py  utils.py  yolo-pose-runner.py
src/datasets/: pose_triplet_dataset.py
src/models/: pose_encoder.py
src/temp/: pose.py  track_botmot.py
src/trackers/: botsort.yaml  tracker_sort.py
src/training/: train.py
src/utils/: download_video.py  get_data.py  merge_parquets.py  remap_track_ids.py  track_remover.py  visualize_parquet.py  yt_qt_download.sh
utils/: remap_track_ids.py  visualize_parquet.py
(+12 files in other folders)
