[project]
name = "octapose"
version = "0.1.0"
description = "UFC-focused pose estimation and knockout prediction using real-time computer vision and ML analytics"
authors = [
    {name = "Anar Abbas",email = "anar.abbasly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
