[project]
name = "octapose"
version = "0.1.0"
description = "UFC-focused pose estimation and knockout prediction using real-time computer vision and ML analytics"
authors = [
    {name = "Anar Abbas",email = "anar.abbasly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "ultralytics (>=8.3.152,<9.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
